--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Valentine buat Kezia 💘</title>
+  <title>Valentine 💘</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -13,7 +13,7 @@
 
   <main class="wrap">
     <div class="topbar">
-      <div class="pill">💗 14 Feb vibes</div>
+      <div class="pill">💗 14 Feb </div>
       <button class="pill ghost" id="musicBtn" type="button">🔊 on/off</button>
     </div>
 
@@ -30,13 +30,7 @@
 
         <div class="sticker catSticker">🐱💕</div>
 
-        <div class="sticker photoSticker">
-          <div class="photoFrame">
-            <div class="photoTitle">kita 🫶</div>
-            <div class="photoHint">kalau mau foto, edit di HTML ya</div>
-          </div>
-        </div>
-      </div>
+    
 
       <div class="slide" id="slide"></div>
 
@@ -50,8 +44,8 @@
 
     <!-- FORM (hidden dulu, kebuka setelah tap terakhir) -->
     <section class="card hidden" id="formCard">
-      <h2 class="h2">Oke now jujur ya 😛</h2>
-      <p class="muted">“esat apa yang kamu mau?”</p>
+      <h2 class="h2">hei jawab satu pertanyaan ini yh</h2>
+      <p class="muted">“mau coklat tidak?”</p>
 
       <form id="valForm" class="form">
         <label>nama kamu</label>
