Add photo sticker section to index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         </div>
 
         <div class="sticker catSticker">🐱💕</div>
-
-    
+       div class="sticker photoSticker">
+          <div class="photoFrame">
+            <div class="photoTitle">kita 🫶</div>
+            <div class="photoHint">kalau mau foto, edit di HTML ya</div>
+          </div>
+        </div>
+    </div>
 
       <div class="slide" id="slide"></div>
 
